--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "zaw"]
 	path = zsh/zaw
 	url = git://github.com/zsh-users/zaw.git
+[submodule "emacs.d"]
+	path = emacs.d
+	url = git@github.com:erictzeng/dotemacs.git
