Use reattach-to-user-namespace in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -56,6 +56,9 @@ set -g window-status-separator ""
 
 set -g default-terminal "xterm-256color"
 
+if-shell '[ -n "$(command -v reattach-to-user-namespace)" ]' \
+  "set -g default-command \"reattach-to-user-namespace -l $SHELL\""
+
 # Version-specific commands [grumble, grumble]
 # See: https://github.com/tmux/tmux/blob/master/CHANGES
 run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
